--- a/backend/.env
+++ b/backend/.env
@@ -19,3 +19,11 @@ APP_SECRET=f62f04c85dc6315718c9d3aa685b208f
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For a PostgreSQL database, use: "postgresql://jameson:Savelev01@127.0.0.1:5432/atlantis_0"
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+ DATABASE_URL="postgresql://user:pasassword@127.0.0.1:5432/db_name"
+###< doctrine/doctrine-bundle ###
