--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,11 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "fontsource-roboto": "^3.0.3",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lodash": "^0.1.2",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.14.1"
   }
 }
