--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,17 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "fontsource-roboto": "^3.0.3",
+    "loaders.css": "^0.1.2",
     "react": "^17.0.1",
+    "react-delay-render": "^0.1.2",
     "react-dom": "^17.0.1",
+    "react-loaders": "^3.0.1",
     "react-lodash": "^0.1.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
     "react-scripts": "4.0.0",
+    "react-scroll": "^1.8.1",
     "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
