--- a/backend/.env
+++ b/backend/.env
@@ -25,5 +25,5 @@ APP_SECRET=f62f04c85dc6315718c9d3aa685b208f
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://jameson:Savelev01@127.0.0.1:5432/atlantis_0"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
- DATABASE_URL="postgresql://user:pasassword@127.0.0.1:5432/db_name"
+ DATABASE_URL="postgresql://jameson:Savelev01@127.0.0.1:5432/atlantis_0"
 ###< doctrine/doctrine-bundle ###
