--- a/backend/.env
+++ b/backend/.env
@@ -14,8 +14,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=f62f04c85dc6315718c9d3aa685b208f
+#APP_ENV=dev
+#APP_SECRET=
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
@@ -25,5 +25,5 @@ APP_SECRET=f62f04c85dc6315718c9d3aa685b208f
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://jameson:Savelev01@127.0.0.1:5432/atlantis_0"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
- DATABASE_URL="postgresql://jameson:Savelev01@127.0.0.1:5432/atlantis_0"
+# DATABASE_URL="postgresql://login:password@127.0.0.1:5432/atlantis_0"
 ###< doctrine/doctrine-bundle ###
